media model improvement
