# web/handlers/media.go
@@ -3,9 +3,10 @@ package handlers
 import (
 	"github.com/gin-gonic/gin"
 	"github.com/jinzhu/gorm"
+	"net/http"
 	"tagee/internal/models"
 	"tagee/web/utils"
-	"net/http"
+	"time"
 )
 
 type GetParams struct {
@@ -16,21 +17,42 @@ type GetBulkParams struct {
 }
 
 type CreateParams struct {
-	Title string `form:"title" binding:"required"`
-	Kind int `form:"kind"`
-	Suffix string `form:"suffix"`
-	Size uint64 `form:"size"`
-	Url string `form:"url" binding:"required"`
+	Title                  string `form:"title" binding:"required"`
+	Kind                   int    `form:"kind"`
+	Suffix                 string `form:"suffix"`
+	Size                   uint64 `form:"size"`
+	Url                    string `form:"url" binding:"required"`
+	Description            string `form:"description"`
+	LastModifiedAt         int64  `form:"last_modified_at"`
+	OriginRelativePathname string `form:"origin_relative_pathname"`
+	CustomRelativePathname string `form:"custom_relative_pathname"`
+	MD5                    string `form:"md5" binding:"required"`
 }
 
 type UpdateParams struct {
-	Title string `form:"title" binding:"required"`
-	Url string `form:"url" binding:"required"`
+	Title                  string `form:"title"`
+	Kind                   int    `form:"kind"`
+	Suffix                 string `form:"suffix"`
+	Size                   uint64 `form:"size"`
+	Url                    string `form:"url"`
+	Description            string `form:"description"`
+	LastModifiedAt         int64  `form:"last_modified_at"`
+	OriginRelativePathname string `form:"origin_relative_pathname"`
+	CustomRelativePathname string `form:"custom_relative_pathname"`
+	MD5                    string `form:"md5"`
 }
 
 type PatchParams struct {
-	Title string `form:"title"`
-	Url string `form:"url"`
+	Title                  string `form:"title"`
+	Kind                   int    `form:"kind"`
+	Suffix                 string `form:"suffix"`
+	Size                   uint64 `form:"size"`
+	Url                    string `form:"url"`
+	Description            string `form:"description"`
+	LastModifiedAt         int64  `form:"last_modified_at"`
+	OriginRelativePathname string `form:"origin_relative_pathname"`
+	CustomRelativePathname string `form:"custom_relative_pathname"`
+	MD5                    string `form:"md5"`
 }
 
 // @Summary Get media by id
@@ -48,7 +70,7 @@ func GetMedia(c *gin.Context) {
 
 	if err := c.ShouldBindUri(&params); err != nil {
 		c.JSON(http.StatusBadRequest, FailedResponse{
-			ErrMsg: err.Error(),
+			ErrMsg:  err.Error(),
 			ErrCode: http.StatusBadRequest,
 		})
 		return
@@ -62,7 +84,7 @@ func GetMedia(c *gin.Context) {
 		}
 
 		c.JSON(errCode, FailedResponse{
-			ErrMsg: err.Error(),
+			ErrMsg:  err.Error(),
 			ErrCode: errCode,
 		})
 		return
@@ -84,7 +106,7 @@ func GetMediaBulk(c *gin.Context) {
 
 	if err := c.ShouldBindUri(&params); err != nil {
 		c.JSON(http.StatusBadRequest, FailedResponse{
-			ErrMsg: err.Error(),
+			ErrMsg:  err.Error(),
 			ErrCode: http.StatusBadRequest,
 		})
 		return
@@ -93,7 +115,7 @@ func GetMediaBulk(c *gin.Context) {
 	medias, err := models.GetMediaBulk()
 	if err != nil {
 		c.JSON(http.StatusInternalServerError, FailedResponse{
-			ErrMsg: err.Error(),
+			ErrMsg:  err.Error(),
 			ErrCode: http.StatusInternalServerError,
 		})
 		return
@@ -116,24 +138,29 @@ func CreateMedia(c *gin.Context) {
 
 	if err := c.ShouldBind(&params); err != nil {
 		c.JSON(http.StatusBadRequest, FailedResponse{
-			ErrMsg: err.Error(),
+			ErrMsg:  err.Error(),
 			ErrCode: http.StatusBadRequest,
 		})
 		return
 	}
 
 	media := &models.Media{
-		Title: params.Title,
-		Kind: params.Kind,
-		Suffix: params.Suffix,
-		Size: params.Size,
-		Url: params.Url,
+		Title:                  params.Title,
+		Kind:                   params.Kind,
+		Suffix:                 params.Suffix,
+		Size:                   params.Size,
+		Url:                    params.Url,
+		Description:            params.Url,
+		LastModifiedAt:         time.Unix(utils.ValidOrDefault(params.LastModifiedAt, time.Now().Unix()).(int64), 0),
+		OriginRelativePathname: params.OriginRelativePathname,
+		CustomRelativePathname: params.CustomRelativePathname,
+		MD5:                    params.MD5,
 	}
 
 	err := models.CreateMedia(media)
 	if err != nil {
 		c.JSON(http.StatusInternalServerError, FailedResponse{
-			ErrMsg: err.Error(),
+			ErrMsg:  err.Error(),
 			ErrCode: http.StatusInternalServerError,
 		})
 		return
@@ -156,10 +183,9 @@ func PatchMedia(c *gin.Context) {
 	var getParams GetParams
 	var patchParams PatchParams
 
-
 	if err := c.ShouldBindUri(&getParams); err != nil {
 		c.JSON(http.StatusBadRequest, FailedResponse{
-			ErrMsg: err.Error(),
+			ErrMsg:  err.Error(),
 			ErrCode: http.StatusBadRequest,
 		})
 		return
@@ -167,12 +193,11 @@ func PatchMedia(c *gin.Context) {
 
 	if err := c.ShouldBind(&patchParams); err != nil {
 		c.JSON(http.StatusBadRequest, FailedResponse{
-			ErrMsg: err.Error(),
+			ErrMsg:  err.Error(),
 			ErrCode: http.StatusBadRequest,
 		})
 		return
 	}
-
 
 	media, err := models.GetMedia(getParams.ID)
 	if err != nil {
@@ -182,18 +207,26 @@ func PatchMedia(c *gin.Context) {
 		}
 
 		c.JSON(errCode, FailedResponse{
-			ErrMsg: err.Error(),
+			ErrMsg:  err.Error(),
 			ErrCode: errCode,
 		})
 		return
 	}
 
 	media.Title = utils.ValidOrDefault(patchParams.Title, media.Title).(string)
+	media.Kind = utils.ValidOrDefault(patchParams.Kind, media.Kind).(int)
+	media.Suffix = utils.ValidOrDefault(patchParams.Suffix, media.Suffix).(string)
+	media.Size = utils.ValidOrDefault(patchParams.Size, media.Size).(uint64)
 	media.Url = utils.ValidOrDefault(patchParams.Url, media.Url).(string)
+	media.Description = utils.ValidOrDefault(patchParams.Description, media.Description).(string)
+	media.LastModifiedAt = time.Unix(utils.ValidOrDefault(patchParams.LastModifiedAt, media.LastModifiedAt.Unix()).(int64), 0)
+	media.OriginRelativePathname = utils.ValidOrDefault(patchParams.OriginRelativePathname, media.OriginRelativePathname).(string)
+	media.CustomRelativePathname = utils.ValidOrDefault(patchParams.CustomRelativePathname, media.CustomRelativePathname).(string)
+	media.MD5 = utils.ValidOrDefault(patchParams.MD5, media.MD5).(string)
 
 	if err := media.Update(); err != nil {
 		c.JSON(http.StatusInternalServerError, FailedResponse{
-			ErrMsg: err.Error(),
+			ErrMsg:  err.Error(),
 			ErrCode: http.StatusInternalServerError,
 		})
 	}
@@ -217,7 +250,7 @@ func UpdateMedia(c *gin.Context) {
 
 	if err := c.ShouldBindUri(&getParams); err != nil {
 		c.JSON(http.StatusBadRequest, FailedResponse{
-			ErrMsg: err.Error(),
+			ErrMsg:  err.Error(),
 			ErrCode: http.StatusBadRequest,
 		})
 		return
@@ -225,12 +258,11 @@ func UpdateMedia(c *gin.Context) {
 
 	if err := c.ShouldBind(&updateParams); err != nil {
 		c.JSON(http.StatusBadRequest, FailedResponse{
-			ErrMsg: err.Error(),
+			ErrMsg:  err.Error(),
 			ErrCode: http.StatusBadRequest,
 		})
 		return
 	}
-
 
 	media, err := models.GetMedia(getParams.ID)
 	if err != nil {
@@ -240,18 +272,26 @@ func UpdateMedia(c *gin.Context) {
 		}
 
 		c.JSON(errCode, FailedResponse{
-			ErrMsg: err.Error(),
+			ErrMsg:  err.Error(),
 			ErrCode: errCode,
 		})
 		return
 	}
 
 	media.Title = updateParams.Title
+	media.Kind = updateParams.Kind
+	media.Suffix = updateParams.Suffix
+	media.Size = updateParams.Size
 	media.Url = updateParams.Url
+	media.Description = updateParams.Description
+	media.LastModifiedAt = time.Unix(utils.ValidOrDefault(updateParams.LastModifiedAt, time.Now().Unix()).(int64), 0)
+	media.OriginRelativePathname = updateParams.OriginRelativePathname
+	media.CustomRelativePathname = updateParams.CustomRelativePathname
+	media.MD5 = updateParams.MD5
 
 	if err := media.Update(); err != nil {
 		c.JSON(http.StatusInternalServerError, FailedResponse{
-			ErrMsg: err.Error(),
+			ErrMsg:  err.Error(),
 			ErrCode: http.StatusInternalServerError,
 		})
 	}
